// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler options when TSConfig file is missing, sets default compiler options: stdout 1`] = `
"uses TypeScript <<version>>

pass ./__typetests__/dummy.test.ts
  + 'strictNullChecks': true
  + 'strictFunctionTypes': true
  + 'useUnknownInCatchVariables': false

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      3 passed, 3 total
Assertions: 3 passed, 3 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`search strings only the files matched by the 'testFileMatch' patterns are selected: stdout 1`] = `
"uses TypeScript <<version>> with ./feature/__tests__/tsconfig.json

pass ./feature/__tests__/isNumber.test.ts
  + is number?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      1 passed, 1 total
Assertions: 1 passed, 1 total
Duration:   <<timestamp>>

Ran test files matching 'number'.
"
`;

exports[`search strings when multiple search strings are provided, selects matching files: stdout 1`] = `
"uses TypeScript <<version>>

pass ./feature/__tests__/isNumber.tst.ts
pass ./feature/__tests__/isString.tst.ts
pass ./__typetests__/isString.test.ts

Targets:    1 passed, 1 total
Test files: 3 passed, 3 total
Tests:      3 passed, 3 total
Assertions: 3 passed, 3 total
Duration:   <<timestamp>>

Ran test files matching 'string' or 'feature'.
"
`;

exports[`search strings when relative search string is provided, selects matching files: stdout 1`] = `
"uses TypeScript <<version>>

pass ./feature/__tests__/isNumber.tst.ts
  + is number?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      1 passed, 1 total
Assertions: 1 passed, 1 total
Duration:   <<timestamp>>

Ran test files matching './feature/__tests__/isNumber'.
"
`;

exports[`search strings when search string is not provided, selects files in 'typetests' directories: stdout 1`] = `
"uses TypeScript <<version>>

pass ./__typetests__/isNumber.test.ts
pass ./__typetests__/isString.test.ts
pass ./feature/__typetests__/isNumber.test.ts
pass ./feature/__typetests__/isString.test.ts
pass ./feature/typetests/isNumber.test.ts
pass ./feature/typetests/isString.test.ts
pass ./typetests/isNumber.test.ts
pass ./typetests/isString.test.ts

Targets:    1 passed, 1 total
Test files: 8 passed, 8 total
Tests:      8 passed, 8 total
Assertions: 8 passed, 8 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`search strings when search string is not provided, selects files with '.tst.' suffix: stdout 1`] = `
"uses TypeScript <<version>>

pass ./isNumber.tst.ts
pass ./isString.tst.ts
pass ./__tests__/isNumber.tst.ts
pass ./__tests__/isString.tst.ts
pass ./feature/__tests__/isNumber.tst.ts
pass ./feature/__tests__/isString.tst.ts
pass ./feature/tests/isNumber.tst.ts
pass ./feature/tests/isString.tst.ts
pass ./tests/isNumber.tst.ts
pass ./tests/isString.tst.ts

Targets:    1 passed, 1 total
Test files: 10 passed, 10 total
Tests:      10 passed, 10 total
Assertions: 10 passed, 10 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`search strings when single search string is provided, selects matching files: stdout 1`] = `
"uses TypeScript <<version>>

pass ./feature/__tests__/isNumber.tst.ts
pass ./__typetests__/isNumber.test.ts

Targets:    1 passed, 1 total
Test files: 2 passed, 2 total
Tests:      2 passed, 2 total
Assertions: 2 passed, 2 total
Duration:   <<timestamp>>

Ran test files matching 'number'.
"
`;

exports[`test files allows a file to be empty: stdout 1`] = `
"uses TypeScript <<version>>

pass ./__typetests__/dummy.test.ts

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`test files allows a file to have only an empty describe: stdout 1`] = `
"uses TypeScript <<version>>

pass ./__typetests__/dummy.test.ts
  parent
    empty describe

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`test files allows a file to have only empty tests: stdout 1`] = `
"uses TypeScript <<version>>

pass ./__typetests__/dummy.test.ts
  + empty test

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      1 passed, 1 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`test files allows a file to have only expect: stdout 1`] = `
"uses TypeScript <<version>>

pass ./__typetests__/dummy.test.ts

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Assertions: 1 passed, 1 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`test files allows a file to have only skipped describe: stdout 1`] = `
"uses TypeScript <<version>>

pass ./__typetests__/dummy.test.ts
  skipped describe

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`test files allows a file to have only skipped tests: stdout 1`] = `
"uses TypeScript <<version>>

pass ./__typetests__/dummy.test.ts
  - skip is skipped?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      1 skipped, 1 total
Assertions: 1 skipped, 1 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`test files allows a file to have only todo describe: stdout 1`] = `
"uses TypeScript <<version>>

pass ./__typetests__/dummy.test.ts
  have todo this
  and this one

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`test files allows a file to have only todo tests: stdout 1`] = `
"uses TypeScript <<version>>

pass ./__typetests__/dummy.test.ts
  - todo have todo this
  - todo and this one

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      2 todo, 2 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
